--- a/Moveonthing/Agileproject/MOT/static/agile.css
+++ b/Moveonthing/Agileproject/MOT/static/agile.css
@@ -1,8 +1,153 @@
 
-body {
-  font-family: sans-serif;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-ul {
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  font-size: 14px;
+  line-height: 1.5;
+}
+.header-container {
+  background-color: white; /* Màu nền đen */
+  color: black; /* Màu chữ trắng */
+  padding: 5px; /* Khoảng cách lề cho header */
+  height: auto;
+}
+.logo-container {
+  position: absolute;
+  top: 0;
+  left: 6%;
+  width: 100px;
+  height: auto;
+  clip-path: polygon(0 0, 100% 0, 100% 70%, 50% 100%, 0% 70%);
+  z-index: 2;
+  background-color: #760504;
+}
+
+.logo {
+  width: 100%;
+  height: auto;
+  
+}
+
+.header-top {
+  display: flex; /* Sử dụng flexbox để căn chỉnh phần tử con */
+  justify-content: space-between; /* Căn chỉnh các phần tử con theo chiều ngang, cách xa nhau */
+  align-items: center; /* Căn chỉnh các phần tử con theo chiều dọc, căn giữa */
+  height: 40px;
+}
+
+.title {
+  font-size: 16px; /* Kích thước chữ cho tiêu đề */
+  font-weight: bold;
+  margin-left: calc(6% + 100px + 10px); /* Khoảng cách là 6% + chiều rộng logo + 10px */
+
+}
+
+.sub-title {
+  margin-left: auto;
+}
+.sub-title i {
+  color: #000;
+  width: 20px;
+  margin-right: 10px; /* Khoảng cách giữa các biểu tượng */
+}
+
+.sub-title i:hover {
+  color:#e45f5f; /* Màu khi di chuột qua */
+}
+
+/* section-picture */
+
+.section-picture {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} 
+.background-picture {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}  
+.mySlides {
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+}
+.picture-caption {
+  position: absolute;
+  top: 350px;
+  left: 0;
+  width: 100%;
+  color: #fff;
+  padding: 10px;
+  margin: 0;
+  text-align: center;
+  z-index: 1;
+  font-size: 24px;
+}  
+.picture-caption h1 {
+  font-size: 46px;
+  margin-bottom: 10px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  /* thêm viền */
+  -webkit-text-stroke: 1px #000;
+  text-stroke: 1px #000;
+}
+.picture-caption p {
+  font-size: 20px;
+  margin-bottom: 20px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+/* Menu */
+.menu {
+  list-style-type: none;
+  margin: 0;
+  width: 100%;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.9); /* Màu nền trắng khi rê chuột vào */
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5); /* Đổ bóng */
+  display: flex;
+  justify-content: space-between; /* Canh giữa menu */
+  align-items: center;
+  position: absolute; /* Để menu đè lên phần picture */
+  z-index: 1; /* Đảm bảo menu đè lên phần picture */
+  transition: background-color 0.3s ease; /* Hiệu ứng chuyển đổi màu nền */
+}
+
+.menu li {
+  margin: 0 10px; /* Khoảng cách giữa các mục menu */
+  font-weight: bold;
+}
+
+.menu li a {
+  display: block;
+  color: #000; /* Màu chữ đen */
+  text-decoration: none;
+  padding: 10px 20px; /* Khoảng cách giữa các mục */
+  font-family: 'Roboto', sans-serif; /* Chọn font chữ đẹp */
+  transition: all 0.3s ease; /* Hiệu ứng hover mềm mại */
+}
+
+.menu li a:hover {
+  color: #ff4d4d; /* Màu chữ đỏ khi hover */
+  background-color: rgba(255, 255, 255, 0.2); /* Màu nền nhẹ khi hover */
+}
+
+.menu li a.active {
+  color: #ff4d4d; /* Màu chữ đỏ khi mục được chọn */
+}
+
+
+/* ul {
     list-style-type: none;
    margin: 0;
    padding: 0;
@@ -30,22 +175,35 @@ ul {
   
   li a:hover {
     background-color: #999999;
-  }
+  } */
+  
+
+  /* Login icon */
+  .menu input {
+    width: 300px;
+    padding: 10px 40px 10px 10px;
+    border: none;
+    background-color: #f5f5f5;
+    background-image: url(./images/iconsearch.png);
+    /* tránh ảnh lặp lại */
+    background-repeat: no-repeat; 
+	  background-position: left 10px center;
+	  background-size: 15px 15px; /* Kích thước của biểu tượng */
+    font-size: 14px;
+    color: #333;
+    padding-left: 30px;
+    font-style: italic;
+}
   .login{
     border: none;
-    border-radius: 20px;
-    padding: 7px 7px;
-    background: linear-gradient(to right,#4b3cad,#e45f5f);
-    margin-left: auto;
-   margin-right: 20px;
-   text-decoration: none;
-   color: white;
+    padding: 0;
+    text-decoration: none;
+    font-weight: bold;
+    color: #760504  ;
 }
-  .login:hover{
-    background: linear-gradient(to right,#f1f1f3,#bbbaba);
-    cursor: pointer;
-    color: black;
-  }
+
+
+/* 
 nav {
     background:linear-gradient(to right,#e45f5f,#4b3cad);
     width:100%;
@@ -108,3 +266,167 @@ h2{
   font-size: 20px;
 }
 
+
+ */
+ /*THANH TIN TỨC */
+ .container {
+  display: flex;
+}
+
+ .sidebar {
+  width: 250px;
+  background-color: #f8f9fa; /* Màu nền phụ */
+  border-right: 1px solid #ced4da; /* Đường viền bên phải */
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Hiệu ứng bóng đổ */
+}
+
+.content {
+  flex: 1;
+  padding: 20px;
+}
+
+h2 {
+  font-size: 18px; /* Giảm kích thước font */
+  margin-bottom: 15px; /* Tăng khoảng cách dưới */
+  letter-spacing: 2px; /* Giảm khoảng cách giữa các ký tự */
+  display: flex;
+  align-items: center;
+  color: #333;
+}
+
+h2 img {
+  margin-right: 10px;
+}
+
+.notification-list li {
+  list-style-type:disc; /* Loại bỏ dấu chấm đầu dòng */
+  padding: 8px 0; /* Giảm khoảng cách giữa các mục */
+  border-bottom: 1px solid #ced4da; /* Đường viền dưới mỗi mục */
+  letter-spacing: 1px;
+}
+
+.notification-list li:last-child {
+  border-bottom: none;
+}
+
+.notification-list li a {
+  text-decoration: none;
+  color: #333;
+  display: block;
+}
+
+.notification-list li a:hover {
+  color: #ff0000; /* Màu chữ khi di chuột qua */
+}
+/* THANH SỰ KIỆN */
+.events {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.events h2 {
+  font-size: 20px;
+  margin-bottom: 15px; /* Tăng khoảng cách dưới */
+  display: flex;
+  align-items: center;
+}
+
+.events .event {
+  margin-bottom: 20px;
+}
+
+.events .event:last-child {
+  margin-bottom: 0;
+}
+/* CSS CHO SU KIEN */
+.new-collection {
+  padding: 20px; /* Giảm padding để không cần phải sử dụng margin */
+  text-align: center;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.collection-grid {
+  display: flex;
+  justify-content: space-between; /* Canh giữa các collection item */
+  flex-wrap: nowrap; /* Cho phép collection items wrap khi không đủ không gian */
+}
+
+.collection-item {
+  flex: 1; /* Cân bằng kích thước của các collection items */
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  text-align: center;
+  background-color: white;
+  margin-left: 10px;
+  margin-bottom: 20px; /* Tạo khoảng cách giữa các collection item */
+  transition: all 0.3s ease; /* Hiệu ứng hover mềm mại */
+}
+
+.collection-item img {
+  max-width: 100%;
+  height:auto;
+  margin-bottom: 10px;
+}
+
+.collection-item p {
+  font-family: Arial, sans-serif;
+  font-size: 12px; /* Tăng kích thước font */
+  color: #333;
+  margin-bottom: 10px;
+}
+
+/* Hiệu ứng hover cho phần tử .collection-item */
+.collection-item:hover {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  transform: translateY(-5px);
+}
+/* CSS cho thông báo */
+.notification ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.notification li {
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  padding: 20px;
+}
+
+.notification li h3 {
+  color: #333;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.notification li p {
+  color: #666;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+.notification li:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transform: translateY(-2px);
+}
+
+/* footer */
+.footer {
+  background-color: #333; /* Màu nền của footer */
+  color: #fff; /* Màu chữ của footer */
+  padding: 20px 0; /* Khoảng cách padding trên và dưới */
+  text-align: center; /* Căn giữa nội dung */
+  font-size: 14px; /* Kích thước font chữ */
+}
+
+.footer-content {
+  max-width: 1200px; /* Chiều rộng tối đa của nội dung */
+  margin: 0 auto; /* Căn giữa nội dung */
+}
