--- a/Moveonthing/Agileproject/MOT/templates/homepage.html
+++ b/Moveonthing/Agileproject/MOT/templates/homepage.html
@@ -9,22 +9,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <!--Header-->
-    <div class='container-header'>
-        <h3 class='text-header'>TRƯỜNG ĐẠI HỌC ABC</h3>
-        <p>Số 280 An Dương Vương, phường 4, quận 5, TP.HCM</p>
-        <p>Điện thoại: 0123456789</p>
+    <div class="container">
+        <div class="content">
+            <div class="events">
+                <div class="event">
+                    <div class="header-icons">
+                        <input type="text" placeholder="Tìm kiếm..." class="search-bar" style=" width: 400px;">
+                        <span class="icon"><i class="fa fa-comments"></i></span>
+                        <span class="icon"><i class="fa fa-envelope"></i></span>
+                        <span class="icon"><i class="fa fa-bell"></i></span>
+                    </div>
+                </div>
+
+              </div>
+        </div>
+                    <!--Sidebar-->
+        <nav class="sidebar">
+              <div class="sidebar">
+                <h2><img src="./static/images/icon-.png" style="width: 24px; height: 24px; vertical-align: middle;" /> HI ADMIN</h2>
+                  <a class="active" href="#home"><i class="fa fa-home"></i> Trang chủ</a>
+                  <a href="#"><i class="fa fa-user"></i> Sinh viên</a>
+                  <a href="#"><i class="fa fa-book"></i> Tổ chức thi</a>
+                  <a href=""><i class="fa fa-file-text"></i> Kết quả tốt nghiệp</a>
+                  <a href="{% url 'Logout' %}"><i class="fa fa-sign-out"></i> Đăng xuất</a>
+                  <img src="./static/images/logo.png" alt="Logo" class="logo">
+
+              </div>
+          </nav>
     </div>
-    <!--Sidebar-->
-    <div class="sidebar">
-        <a class="active" href="#home"><i class="fa fa-home"></i> Trang chủ</a>
-        <a href="#"><i class="fa fa-user"></i> Sinh viên</a>
-        <a href="#"><i class="fa fa-book"></i> Tổ chức thi</a>
-        <a href=""><i class="fa fa-file-text"></i> Kết quả tốt nghiệp</a>
-        <a href="{% url 'Logout' %}"><i class="fa fa-sign-out"></i> Đăng xuất</a>
-    </div>
-    <div class="content">
-        
-    </div>
+    
 </body>
 </html>
