--- a/Moveonthing/Agileproject/MOT/static/login.css
+++ b/Moveonthing/Agileproject/MOT/static/login.css
@@ -8,7 +8,13 @@
     margin: 0;
     font-size: 14px;
     line-height: 1.5;
+    background-color: #f8f9fa;
   }
+
+  .warning {
+    color: red;
+  }
+
   .header-container {
     background-color: white; /* Màu nền đen */
     color: black; /* Màu chữ trắng */
@@ -346,9 +352,7 @@ input[type="checkbox"] {
 }
 
 /* Additional styling */
-body {
-    background-color: #f8f9fa; /* Màu nền cho toàn bộ trang */
-}
+
 
 /* Thêm các điều chỉnh vị trí */
 .form-login-inside {
@@ -375,3 +379,4 @@ body {
 button {
     width: 100%;
 }
+
