--- a/Moveonthing/Agileproject/MOT/templates/homepage.html
+++ b/Moveonthing/Agileproject/MOT/templates/homepage.html
@@ -28,7 +28,7 @@
               <div class="sidebar">
                 <h2><img src="./static/images/icon-.png" style="width: 24px; height: 24px; vertical-align: middle;" /> HI ADMIN</h2>
                   <a class="active" href="#home"><i class="fa fa-home"></i> Trang chủ</a>
-                  <a href="#"><i class="fa fa-user"></i> Sinh viên</a>
+                  <a href="sinhvien"><i class="fa fa-user"></i> Sinh viên</a>
                   <a href="#"><i class="fa fa-book"></i> Tổ chức thi</a>
                   <a href=""><i class="fa fa-file-text"></i> Kết quả tốt nghiệp</a>
                   <a href="{% url 'Logout' %}"><i class="fa fa-sign-out"></i> Đăng xuất</a>
@@ -36,6 +36,7 @@
 
               </div>
           </nav>
+          
     </div>
     
 </body>
